
    2.4                                     --
      Added 'standard_cc' (env-cc), 'standard_system' (env-system) commands.
      Fixed 'defined', 'size' directives so that they will
        work with a cross-compile (MKC_CROSS=Y must be defined).
      Added examples/helloworld.
      Added Makefile.inc for simple builds.
      Made easier to use.
      Move most files to a sub-directory.

    2.3                                     [2020-6-3]
      Fixed an issue propogating LDFLAGS_SHARED.
      Fix library check when using g++.
      Propogate CFLAGS_OPTIMIZE and CFLAGS_DEBUG properly to linker.
      Added bin/capabilities.sh script.
      Added yash to the supported scripts list (version 2.48 or later;
        I don't know when its issues were fixed).

    2.2                                     [2020-5-22]
        Added support for oilshell (osh; oilshell.org).
        mkcl.sh will display its messages as a single printf so that
          make -j does not look really weird.

    2.1.1                                   [2019-6-25]
        env-cc: Fix getconf/cflags_system.
        Fix putsnonl function when 'echo' is in use.

    2.1.0                                   [2018-12-27]
        Add test for shell interpolation bug.  Use printf if possible
          for POSIX compliance.
        env-cc: Fix cflags_shared.
        env-cc: Pick up all cflags* and ldflags* defaults from the
          environment.
        mkcl.sh: Fix processing of LDFLAGS.
        mkcl.sh: Support .m extension.
        mkcl.sh: Support command line set of env vars (must be quoted).
        env-cc: Add support for DragonFlyBSD.
        env-cc: Add support for pkgconfig files (findpc).

    2.0.0                                   [2018-8-12]
        C: split CFLAGS, LDFLAGS, LIBS into multiple environment
          variables for easier processing. D language is probably broken.
        C: fix shared flags
        C: Various bug fixes for msys2, tru64, etc.