@@ -21,18 +21,19 @@ As of 2020-6-11, the 'di' program version 4.48 is using mkconfig version 2.3.
 
 mkconfig works with most any bourne shell compatible shell.  Modern
 shells that are not bourne shell compatible are:
-  posh, zsh (compatibility mode).
+  posh, bosh, zsh (compatibility mode).
 Very old shells do not have the memory capabilities needed in order to
 save the large number of variables that mkconfig needs.
 
 TESTING
-    Version 2.0.0 has been tested on:
+    Version 2.4 has been tested on:
       Linux
+	Debian 9 (gcc) (bash4, dash)
         RedHat 7.3 (gcc) (ash, bash2, sh/bash2)
         CentOS 3.9 (gcc) (ash, bash2, pdksh, sh/bash2)
         Fedora 7 (gcc) (bash3, sh/bash3)
         Fedora 27 (gcc) (bash4, sh/bash4)
-        MX Linux 17.1 (gcc, clang) (bash4, dash, ksh93, mksh)
+        + MX Linux 19.2 (gcc8, clang) (ksh93 osh bash5 dash mksh yash)
       BSD
         DragonflyBSD 4.4 (gcc) (bash4, dash, pdksh, ksh93, mksh)
         FreeBSD 7.0 (cc) (sh)
@@ -42,18 +43,20 @@ TESTING
         NetBSD 7.0.1 (gcc) (pdksh, sh, bash4, mksh)
         OpenBSD 4.4 (gcc) (pdksh, sh)
       Windows
-        Msys2 (gcc, clang) (ash, bash4, dash, sh/bash4)
-        Cygwin (gcc) (ash, bash4, dash, mksh, sh/bash4)
+        Msys2 (gcc9, clang) (ash, bash4, dash, sh/bash4)
+        Cygwin (gcc8, clang8) (ash, bash4, dash, mksh, sh/bash4)
       Other
-        AIX 7.1 (gcc) (bash4, ksh, ksh93, sh)
-        Mac OS X 10.12.6 (clang) (bash3, ksh93, sh/bash3)
-        QNX 6.5 (cc) (pdksh, bash4, sh/pdksh)
-        SCO SV 6.0.0 (cc) (sh, ksh, ksh93, bash3, bash2)
-        Solaris 11/x86 (cc12.3) (bash4, ksh93, sh/ksh93)
-        Solaris 10/sparc (cc12.3) (bash4, sh(1), sh, bash3, ksh)
+        + AIX 7.1 (xlc, gcc4) (bash4, ksh, ksh93, sh)
+        + AIX 7.2 (xlc, gcc7) (bash4, ksh, ksh93, sh)
+        HP-UX 11.11 (cc, gcc4) (sh, ksh, bash4)
+        + Mac OS X 10.15.5 (clang) (bash3, dash, ksh93, sh/bash3)
+        + QNX 6.5 (cc) (pdksh, bash4, sh/pdksh)
+        + SCO SV 6.0.0 (cc, gcc2) (sh, ksh, ksh93, bash3, bash2)
+        + Solaris 11/x86 (cc 12.3, gcc5) (bash4, ksh93, sh/ksh93)
+        Solaris 10/sparc (cc 12.3, gcc5) (bash4, sh(1), sh, bash3, ksh)
         Solaris 9/x86 (gcc3) (bash4, ksh93, sh(1), bash2, sh)
         Tru64 5.1b (cc) (sh, ksh, bash2)
-        UnixWare 7.1.4 (cc) (sh, ksh93, ksh88, bash2)
+        + UnixWare 7.1.4 (cc, gcc2) (sh, ksh93, ksh88, bash2)
         (1) not a standard solaris shell
 
 ISSUES
