@@ -2,6 +2,7 @@ dtcltk - D Language bindings for tcl/tk (example)
 
 This is an example for the D language.
 It is unfinished and has not been tested.
+It is severely out of date.
 
 make
 make hw_tk_d2
