@@ -142,7 +142,7 @@ check_system () {
 }
 
 check_standard_system () {
-  check_system type
-  check_system  rev
-  check_system arch
+  check_system system type
+  check_system system rev
+  check_system system arch
 }
